# cleaning_app

./: .env.development  .env.production  README.md  manage.py  pyproject.toml
cleaning_app/: asgi.py  settings.py  urls.py  wsgi.py
clients/: models.py  urls.py
finance/: models.py
quotes/: models.py
services/: models.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
