[tool.poetry]
name = "cleaning-app"
version = "0.1.0"
description = ""
authors = ["leodpj <leodj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.7"
djangorestframework = "^3.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
